--- a/ThesisReport/reference.bib
+++ b/ThesisReport/reference.bib
@@ -386,3 +386,15 @@
  school={Massachusetts Institute of Technology}
 }
 
+@book{how95,
+	  title={Binocular vision and stereopsis.},
+	    author={Howard, Ian P and Rogers, Brian J},
+	      year={1995},
+	        publisher={Oxford University Press}
+}
+@book{binr83,
+	  title={Binocular vision: Foundations and applications},
+	    author={Reading, RW},
+	      year={1983},
+	        publisher={Butterworths}
+}
