--- a/ThesisReport/thesis.tex
+++ b/ThesisReport/thesis.tex
@@ -66,10 +66,12 @@ In fact, our fundamental research question is: \newline
 
 In order to find the answer to this question, some other questions are raised:
 \begin{quote}
-\textbf {"How can we evaluate stereo correspondence in an augmented reality framework? What are the important factors we need to consider for this type of evaluation?"} \newline
-\textbf {"In a combination of augmented reality with stereo vision, what would be considered as \textbf{\it accurate} depth result?"} \newline
-\textbf {"How is the depth perception of surrounding environment in human visual system?"}\newline
-\textbf {"What is the standard stereo acuity for human visual system? How would it affect an AR system?"} \newline
+\textbf {"How does the human visual system perceive depth?"}\newline
+\textbf {"What is the standard angular disparity for human visual system? How would it affect an AR system?"} \newline
+\textbf {"How can we evaluate stereo vision in an augmented reality framework? What are the important factors we need to consider for 
+	this type of evaluation?"} \newline
+\textbf {"In a combination of augmented reality with stereo vision, what is considered as \textbf{\textit {accurate}} depth result?"} \newline
+\textbf {"How a three dimensional model can be built from stereo images in computer vision?"}\newline
 \textbf {"What are the requirements to maintain an interactive augmented reality application for the user"} \newline
 \end{quote}
 
@@ -472,7 +474,7 @@ This formula estimate the angular disparity in radiant. In order to convert $\th
 Studies show that the visual system capability to distinguish two objects at different distances relative to each other is limited to certain thresholds.
 This threshold, which is defined as the minimum detectable depth between two 
 objects at difference distances, is known as {\it stereo acuity} which can be different in various visual systems \cite{binr83,how95}. According to different
-experiments \cite{binr83}, the finest detectable angular disparity in human visual system can be about 10 arcsecond.
+experiments \cite{binr83}, the finest detectable angular disparity in human visual system can be about 10 arcseconds.
 
 
 
